# ComputerGraphics

./: LICENSE  README.md
pathtracer_source/: README
pathtracer_source/src/: BRDF.cpp  BRDF.h  Bound.cpp  Bound.h  CMakeLists.txt  CSG.cpp  CSG.h  Cone.cpp  Cone.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  DirPoint.cpp  DirPoint.h  Figure.cpp  Figure.h  Image.cpp  Image.h  PathTracer.cpp  PathTracer.h  Plane.cpp  Plane.h  PuntualLight.cpp  PuntualLight.h  Sphere.cpp  Sphere.h  TMatrix.cpp  TMatrix.h  main.cpp
photonmapping_source/: README
photonmapping_source/src/: CMakeLists.txt
photonmapping_source/src/include/: Film.h  Foggy.h  PhotonMapping.h  Random.h  RenderEngine.h  World.h
photonmapping_source/src/smallrt/include/: Lambertian.h  Phong.h  globals.h
photonmapping_source/src/src/: Film.cpp  Foggy.cpp  PhotonMapping.cpp  Random.cpp  RenderEngine.cpp  main.cpp
